sdk-docs_versioned_docs/version-27.0.x/modules/API/Entities/Types/Types.md
---
id: "Types"
title: "Module: Entities Types"
sidebar_label: "Types"
---

## Enumerations

- [AuthorizationType](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md)
- [ClaimType](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md)
- [ConditionTarget](../../../../enums/API/Entities/Types/ConditionTarget/ConditionTarget.md)
- [ConditionType](../../../../enums/API/Entities/Types/ConditionType/ConditionType.md)
- [PermissionGroupType](../../../../enums/API/Entities/Types/PermissionGroupType/PermissionGroupType.md)
- [PermissionType](../../../../enums/API/Entities/Types/PermissionType/PermissionType.md)
- [ScopeType](../../../../enums/API/Entities/Types/ScopeType/ScopeType.md)
- [SignerType](../../../../enums/API/Entities/Types/SignerType/SignerType.md)
- [StatType](../../../../enums/API/Entities/Types/StatType/StatType.md)

## Interfaces

- [AccreditedClaim](../../../../interfaces/API/Entities/Types/AccreditedClaim/AccreditedClaim.md)
- [ActiveTransferRestrictions](../../../../interfaces/API/Entities/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)
- [AddCountStatInput](../../../../interfaces/API/Entities/Types/AddCountStatInput/AddCountStatInput.md)
- [AffiliateClaim](../../../../interfaces/API/Entities/Types/AffiliateClaim/AffiliateClaim.md)
- [BlockedClaim](../../../../interfaces/API/Entities/Types/BlockedClaim/BlockedClaim.md)
- [BuyLockupClaim](../../../../interfaces/API/Entities/Types/BuyLockupClaim/BuyLockupClaim.md)
- [CddClaim](../../../../interfaces/API/Entities/Types/CddClaim/CddClaim.md)
- [CheckPermissionsResult](../../../../interfaces/API/Entities/Types/CheckPermissionsResult/CheckPermissionsResult.md)
- [CheckRolesResult](../../../../interfaces/API/Entities/Types/CheckRolesResult/CheckRolesResult.md)
- [CheckpointWithData](../../../../interfaces/API/Entities/Types/CheckpointWithData/CheckpointWithData.md)
- [ClaimCountTransferRestriction](../../../../interfaces/API/Entities/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md)
- [ClaimData](../../../../interfaces/API/Entities/Types/ClaimData/ClaimData.md)
- [ClaimPercentageTransferRestriction](../../../../interfaces/API/Entities/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)
- [ClaimScope](../../../../interfaces/API/Entities/Types/ClaimScope/ClaimScope.md)
- [ClaimTarget](../../../../interfaces/API/Entities/Types/ClaimTarget/ClaimTarget.md)
- [Compliance](../../../../interfaces/API/Entities/Types/Compliance/Compliance.md)
- [ComplianceRequirements](../../../../interfaces/API/Entities/Types/ComplianceRequirements/ComplianceRequirements.md)
- [ConditionBase](../../../../interfaces/API/Entities/Types/ConditionBase/ConditionBase.md)
- [ConditionCompliance](../../../../interfaces/API/Entities/Types/ConditionCompliance/ConditionCompliance.md)
- [CountTransferRestriction](../../../../interfaces/API/Entities/Types/CountTransferRestriction/CountTransferRestriction.md)
- [CustomClaim](../../../../interfaces/API/Entities/Types/CustomClaim/CustomClaim.md)
- [DistributionPayment](../../../../interfaces/API/Entities/Types/DistributionPayment/DistributionPayment.md)
- [DistributionWithDetails](../../../../interfaces/API/Entities/Types/DistributionWithDetails/DistributionWithDetails.md)
- [ExemptedClaim](../../../../interfaces/API/Entities/Types/ExemptedClaim/ExemptedClaim.md)
- [ExternalAgentCondition](../../../../interfaces/API/Entities/Types/ExternalAgentCondition/ExternalAgentCondition.md)
- [FungiblePortfolioMovement](../../../../interfaces/API/Entities/Types/FungiblePortfolioMovement/FungiblePortfolioMovement.md)
- [IdentityCondition](../../../../interfaces/API/Entities/Types/IdentityCondition/IdentityCondition.md)
- [IdentityWithClaims](../../../../interfaces/API/Entities/Types/IdentityWithClaims/IdentityWithClaims.md)
- [JurisdictionClaim](../../../../interfaces/API/Entities/Types/JurisdictionClaim/JurisdictionClaim.md)
- [KycClaim](../../../../interfaces/API/Entities/Types/KycClaim/KycClaim.md)
- [MiddlewarePaginationOptions](../../../../interfaces/API/Entities/Types/MiddlewarePaginationOptions/MiddlewarePaginationOptions.md)
- [MultiClaimCondition](../../../../interfaces/API/Entities/Types/MultiClaimCondition/MultiClaimCondition.md)
- [OfferingWithDetails](../../../../interfaces/API/Entities/Types/OfferingWithDetails/OfferingWithDetails.md)
- [PaginationOptions](../../../../interfaces/API/Entities/Types/PaginationOptions/PaginationOptions.md)
- [PercentageTransferRestriction](../../../../interfaces/API/Entities/Types/PercentageTransferRestriction/PercentageTransferRestriction.md)
- [PermissionGroups](../../../../interfaces/API/Entities/Types/PermissionGroups/PermissionGroups.md)
- [PermissionedAccount](../../../../interfaces/API/Entities/Types/PermissionedAccount/PermissionedAccount.md)
- [Permissions](../../../../interfaces/API/Entities/Types/Permissions/Permissions.md)
- [Requirement](../../../../interfaces/API/Entities/Types/Requirement/Requirement.md)
- [RequirementCompliance](../../../../interfaces/API/Entities/Types/RequirementCompliance/RequirementCompliance.md)
- [ResultSet](../../../../interfaces/API/Entities/Types/ResultSet/ResultSet.md)
- [ScheduleWithDetails](../../../../interfaces/API/Entities/Types/ScheduleWithDetails/ScheduleWithDetails.md)
- [Scope](../../../../interfaces/API/Entities/Types/Scope/Scope.md)
- [SectionPermissions](../../../../interfaces/API/Entities/Types/SectionPermissions/SectionPermissions.md)
- [SellLockupClaim](../../../../interfaces/API/Entities/Types/SellLockupClaim/SellLockupClaim.md)
- [SignerValue](../../../../interfaces/API/Entities/Types/SignerValue/SignerValue.md)
- [SimplePermissions](../../../../interfaces/API/Entities/Types/SimplePermissions/SimplePermissions.md)
- [SingleClaimCondition](../../../../interfaces/API/Entities/Types/SingleClaimCondition/SingleClaimCondition.md)
- [StatAccreditedClaimInput](../../../../interfaces/API/Entities/Types/StatAccreditedClaimInput/StatAccreditedClaimInput.md)
- [StatAffiliateClaimInput](../../../../interfaces/API/Entities/Types/StatAffiliateClaimInput/StatAffiliateClaimInput.md)
- [StatClaimIssuer](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md)
- [StatJurisdictionClaimInput](../../../../interfaces/API/Entities/Types/StatJurisdictionClaimInput/StatJurisdictionClaimInput.md)
- [TransactionPermissions](../../../../interfaces/API/Entities/Types/TransactionPermissions/TransactionPermissions.md)
- [TrustedClaimIssuer](../../../../interfaces/API/Entities/Types/TrustedClaimIssuer/TrustedClaimIssuer.md)

## References

### AccountBalance

Re-exports [AccountBalance](../Account/Types/Types.md#accountbalance)

___

### AccountIdentityRelation

Re-exports [AccountIdentityRelation](../../../../enums/API/Entities/Account/Types/AccountIdentityRelation/AccountIdentityRelation.md)

___

### AccountKeyType

Re-exports [AccountKeyType](../../../../enums/API/Entities/Account/Types/AccountKeyType/AccountKeyType.md)

___

### AccountTypeInfo

Re-exports [AccountTypeInfo](../../../../interfaces/API/Entities/Account/Types/AccountTypeInfo/AccountTypeInfo.md)

___

### AffirmationStatus

Re-exports [AffirmationStatus](../../../../enums/API/Entities/Instruction/Types/AffirmationStatus/AffirmationStatus.md)

___

### AgentWithGroup

Re-exports [AgentWithGroup](../../../../interfaces/API/Entities/Asset/Types/AgentWithGroup/AgentWithGroup.md)

___

### AnyJson

Re-exports [AnyJson](../MultiSigProposal/Types/Types.md#anyjson)

___

### Asset

Re-exports [Asset](../Asset/Types/Types.md#asset)

___

### AssetDetails

Re-exports [AssetDetails](../../../../interfaces/API/Entities/Asset/Types/AssetDetails/AssetDetails.md)

___

### AssetDocument

Re-exports [AssetDocument](../../../../interfaces/API/Entities/Asset/Types/AssetDocument/AssetDocument.md)

___

### AssetWithGroup

Re-exports [AssetWithGroup](../../../../interfaces/API/Entities/Asset/Types/AssetWithGroup/AssetWithGroup.md)

___

### Balance

Re-exports [Balance](../../../../interfaces/API/Entities/Account/Types/Balance/Balance.md)

___

### BaseHistoricAssetTransaction

Re-exports [BaseHistoricAssetTransaction](../../../../interfaces/API/Entities/Asset/Types/BaseHistoricAssetTransaction/BaseHistoricAssetTransaction.md)

___

### CaCheckpointType

Re-exports [CaCheckpointType](../../../../enums/API/Entities/Asset/Fungible/Checkpoints/Types/CaCheckpointType/CaCheckpointType.md)

___

### CheckpointScheduleParams

Re-exports [CheckpointScheduleParams](../CheckpointSchedule/Types/Types.md#checkpointscheduleparams)

___

### CollectionKey

Re-exports [CollectionKey](../Asset/Types/Types.md#collectionkey)

___

### CorporateActionDefaultConfig

Re-exports [CorporateActionDefaultConfig](../../../../interfaces/API/Entities/Asset/Fungible/CorporateActions/Types/CorporateActionDefaultConfig/CorporateActionDefaultConfig.md)

___

### CorporateActionKind

Re-exports [CorporateActionKind](../../../../enums/API/Entities/CorporateActionBase/Types/CorporateActionKind/CorporateActionKind.md)

___

### CorporateActionParams

Renames and re-exports [Params](../../../../interfaces/API/Entities/CorporateActionBase/Params/Params.md)

___

### CorporateActionTargets

Re-exports [CorporateActionTargets](../../../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md)

___

### DistributionParticipant

Re-exports [DistributionParticipant](../../../../interfaces/API/Entities/DividendDistribution/Types/DistributionParticipant/DistributionParticipant.md)

___

### DividendDistributionDetails

Re-exports [DividendDistributionDetails](../../../../interfaces/API/Entities/DividendDistribution/Types/DividendDistributionDetails/DividendDistributionDetails.md)

___

### DividendDistributionParams

Re-exports [DividendDistributionParams](../../../../interfaces/API/Entities/DividendDistribution/DividendDistributionParams/DividendDistributionParams.md)

___

### FungibleLeg

Re-exports [FungibleLeg](../../../../interfaces/API/Entities/Instruction/Types/FungibleLeg/FungibleLeg.md)

___

### GlobalMetadataKey

Re-exports [GlobalMetadataKey](../MetadataEntry/Types/Types.md#globalmetadatakey)

___

### GroupedInstructions

Re-exports [GroupedInstructions](../../../../interfaces/API/Entities/Instruction/Types/GroupedInstructions/GroupedInstructions.md)

___

### GroupedInvolvedInstructions

Re-exports [GroupedInvolvedInstructions](../../../../interfaces/API/Entities/Instruction/Types/GroupedInvolvedInstructions/GroupedInvolvedInstructions.md)

___

### HeldNfts

Re-exports [HeldNfts](../../../../interfaces/API/Entities/Asset/Types/HeldNfts/HeldNfts.md)

___

### HistoricAgentOperation

Re-exports [HistoricAgentOperation](../../../../interfaces/API/Entities/Asset/Types/HistoricAgentOperation/HistoricAgentOperation.md)

___

### HistoricAssetTransaction

Re-exports [HistoricAssetTransaction](../../../../interfaces/API/Entities/Asset/Types/HistoricAssetTransaction/HistoricAssetTransaction.md)

___

### HistoricInstruction

Re-exports [HistoricInstruction](../Venue/Types/Types.md#historicinstruction)

___

### HistoricNftTransaction

Re-exports [HistoricNftTransaction](../../../../interfaces/API/Entities/Asset/Types/HistoricNftTransaction/HistoricNftTransaction.md)

___

### HistoricPolyxTransaction

Re-exports [HistoricPolyxTransaction](../../../../interfaces/API/Entities/Account/Types/HistoricPolyxTransaction/HistoricPolyxTransaction.md)

___

### HistoricSettlement

Re-exports [HistoricSettlement](../../../../interfaces/API/Entities/Portfolio/Types/HistoricSettlement/HistoricSettlement.md)

___

### HistoricalMultiSigProposal

Re-exports [HistoricalMultiSigProposal](../../../../interfaces/API/Entities/Account/MultiSig/Types/HistoricalMultiSigProposal/HistoricalMultiSigProposal.md)

___

### IdentityBalance

Re-exports [IdentityBalance](../../../../interfaces/API/Entities/Asset/Types/IdentityBalance/IdentityBalance.md)

___

### IdentityHeldNfts

Re-exports [IdentityHeldNfts](../../../../interfaces/API/Entities/Asset/Types/IdentityHeldNfts/IdentityHeldNfts.md)

___

### InputCaCheckpoint

Re-exports [InputCaCheckpoint](../Asset/Fungible/Checkpoints/Types/Types.md#inputcacheckpoint)

___

### InputTargets

Re-exports [InputTargets](../CorporateActionBase/Types/Types.md#inputtargets)

___

### InputTaxWithholding

Re-exports [InputTaxWithholding](../CorporateActionBase/Types/Types.md#inputtaxwithholding)

___

### InstructionAffirmation

Re-exports [InstructionAffirmation](../../../../interfaces/API/Entities/Instruction/Types/InstructionAffirmation/InstructionAffirmation.md)

___

### InstructionDetails

Re-exports [InstructionDetails](../Instruction/Types/Types.md#instructiondetails)

___

### InstructionEndCondition

Re-exports [InstructionEndCondition](../Instruction/Types/Types.md#instructionendcondition)

___

### InstructionStatus

Re-exports [InstructionStatus](../../../../enums/API/Entities/Instruction/Types/InstructionStatus/InstructionStatus.md)

___

### InstructionStatusResult

Re-exports [InstructionStatusResult](../Instruction/Types/Types.md#instructionstatusresult)

___

### InstructionType

Re-exports [InstructionType](../../../../enums/API/Entities/Instruction/Types/InstructionType/InstructionType.md)

___

### InstructionsByStatus

Re-exports [InstructionsByStatus](../Instruction/Types/Types.md#instructionsbystatus)

___

### Investment

Re-exports [Investment](../../../../interfaces/API/Entities/Offering/Types/Investment/Investment.md)

___

### KnownAssetType

Re-exports [KnownAssetType](../../../../enums/API/Entities/Asset/Types/KnownAssetType/KnownAssetType.md)

___

### KnownNftType

Re-exports [KnownNftType](../../../../enums/API/Entities/Asset/Types/KnownNftType/KnownNftType.md)

___

### Leg

Re-exports [Leg](../Instruction/Types/Types.md#leg)

___

### MediatorAffirmation

Re-exports [MediatorAffirmation](../Instruction/Types/Types.md#mediatoraffirmation)

___

### MetadataDetails

Re-exports [MetadataDetails](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataDetails/MetadataDetails.md)

___

### MetadataKeyId

Re-exports [MetadataKeyId](../Asset/Types/Types.md#metadatakeyid)

___

### MetadataLockStatus

Re-exports [MetadataLockStatus](../../../../enums/API/Entities/MetadataEntry/Types/MetadataLockStatus/MetadataLockStatus.md)

___

### MetadataSpec

Re-exports [MetadataSpec](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)

___

### MetadataType

Re-exports [MetadataType](../../../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md)

___

### MetadataValue

Re-exports [MetadataValue](../MetadataEntry/Types/Types.md#metadatavalue)

___

### MetadataValueDetails

Re-exports [MetadataValueDetails](../MetadataEntry/Types/Types.md#metadatavaluedetails)

___

### MetadataWithValue

Re-exports [MetadataWithValue](../MetadataEntry/Types/Types.md#metadatawithvalue)

___

### MultiSigDetails

Re-exports [MultiSigDetails](../../../../interfaces/API/Entities/Account/MultiSig/Types/MultiSigDetails/MultiSigDetails.md)

___

### MultiSigProposalAction

Re-exports [MultiSigProposalAction](../../../../enums/API/Entities/MultiSigProposal/Types/MultiSigProposalAction/MultiSigProposalAction.md)

___

### MultiSigProposalDetails

Re-exports [MultiSigProposalDetails](../../../../interfaces/API/Entities/MultiSigProposal/Types/MultiSigProposalDetails/MultiSigProposalDetails.md)

___

### MultiSigProposalVote

Re-exports [MultiSigProposalVote](../MultiSigProposal/Types/Types.md#multisigproposalvote)

___

### MultiSigSigners

Re-exports [MultiSigSigners](../../../../interfaces/API/Entities/Account/MultiSig/Types/MultiSigSigners/MultiSigSigners.md)

___

### NftLeg

Re-exports [NftLeg](../../../../interfaces/API/Entities/Instruction/Types/NftLeg/NftLeg.md)

___

### NftMetadata

Re-exports [NftMetadata](../../../../interfaces/API/Entities/Asset/Types/NftMetadata/NftMetadata.md)

___

### OffChainAffirmation

Re-exports [OffChainAffirmation](../../../../interfaces/API/Entities/Instruction/Types/OffChainAffirmation/OffChainAffirmation.md)

___

### OffChainLeg

Re-exports [OffChainLeg](../../../../interfaces/API/Entities/Instruction/Types/OffChainLeg/OffChainLeg.md)

___

### OfferingBalanceStatus

Re-exports [OfferingBalanceStatus](../../../../enums/API/Entities/Offering/Types/OfferingBalanceStatus/OfferingBalanceStatus.md)

___

### OfferingDetails

Re-exports [OfferingDetails](../../../../interfaces/API/Entities/Offering/Types/OfferingDetails/OfferingDetails.md)

___

### OfferingSaleStatus

Re-exports [OfferingSaleStatus](../../../../enums/API/Entities/Offering/Types/OfferingSaleStatus/OfferingSaleStatus.md)

___

### OfferingStatus

Re-exports [OfferingStatus](../../../../interfaces/API/Entities/Offering/Types/OfferingStatus/OfferingStatus.md)

___

### OfferingTier

Re-exports [OfferingTier](../../../../interfaces/API/Entities/Offering/Types/OfferingTier/OfferingTier.md)

___

### OfferingTimingStatus

Re-exports [OfferingTimingStatus](../../../../enums/API/Entities/Offering/Types/OfferingTimingStatus/OfferingTimingStatus.md)

___

### PortfolioBalance

Re-exports [PortfolioBalance](../../../../interfaces/API/Entities/Portfolio/Types/PortfolioBalance/PortfolioBalance.md)

___

### PortfolioCollection

Re-exports [PortfolioCollection](../../../../interfaces/API/Entities/Portfolio/Types/PortfolioCollection/PortfolioCollection.md)

___

### ProposalStatus

Re-exports [ProposalStatus](../../../../enums/API/Entities/MultiSigProposal/Types/ProposalStatus/ProposalStatus.md)

___

### ScheduleDetails

Re-exports [ScheduleDetails](../../../../interfaces/API/Entities/CheckpointSchedule/Types/ScheduleDetails/ScheduleDetails.md)

___

### SecurityIdentifier

Re-exports [SecurityIdentifier](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)

___

### SecurityIdentifierType

Re-exports [SecurityIdentifierType](../../../../enums/API/Entities/Asset/Types/SecurityIdentifierType/SecurityIdentifierType.md)

___

### SettlementLeg

Re-exports [SettlementLeg](../Portfolio/Types/Types.md#settlementleg)

___

### SubsidyData

Re-exports [SubsidyData](../../../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md)

___

### SubsidyWithAllowance

Re-exports [SubsidyWithAllowance](../../../../interfaces/API/Entities/Subsidy/Types/SubsidyWithAllowance/SubsidyWithAllowance.md)

___

### TargetTreatment

Re-exports [TargetTreatment](../../../../enums/API/Entities/CorporateActionBase/Types/TargetTreatment/TargetTreatment.md)

___

### TaxWithholding

Re-exports [TaxWithholding](../../../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md)

___

### TickerReservationDetails

Re-exports [TickerReservationDetails](../TickerReservation/Types/Types.md#tickerreservationdetails)

___

### TickerReservationStatus

Re-exports [TickerReservationStatus](../../../../enums/API/Entities/TickerReservation/Types/TickerReservationStatus/TickerReservationStatus.md)

___

### Tier

Re-exports [Tier](../../../../interfaces/API/Entities/Offering/Types/Tier/Tier.md)

___

### TransferBreakdown

Re-exports [TransferBreakdown](../../../../interfaces/API/Entities/Asset/Types/TransferBreakdown/TransferBreakdown.md)

___

### TransferError

Re-exports [TransferError](../../../../enums/API/Entities/Asset/Types/TransferError/TransferError.md)

___

### TransferRestrictionResult

Re-exports [TransferRestrictionResult](../../../../interfaces/API/Entities/Asset/Types/TransferRestrictionResult/TransferRestrictionResult.md)

___

### TransferStatus

Re-exports [TransferStatus](../../../../enums/API/Entities/Asset/Types/TransferStatus/TransferStatus.md)

___

### UniqueIdentifiers

Re-exports [UniqueIdentifiers](../../../../interfaces/API/Entities/Asset/Types/UniqueIdentifiers/UniqueIdentifiers.md)

___

### VenueDetails

Re-exports [VenueDetails](../../../../interfaces/API/Entities/Venue/Types/VenueDetails/VenueDetails.md)

___

### VenueFilteringDetails

Re-exports [VenueFilteringDetails](../../../../interfaces/API/Entities/Asset/Types/VenueFilteringDetails/VenueFilteringDetails.md)

___

### VenueType

Re-exports [VenueType](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)

## Type Aliases

### Account

Ƭ **Account**: [`Account`](../../../../classes/API/Entities/Account/Account.md)

#### Defined in

[api/entities/types.ts:43](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L43)

___

### ActiveStats

Ƭ **ActiveStats**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `claims?` | \{ `claimType`: [`ClaimType`](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md) ; `issuer`: [`Identity`](Types.md#identity)  }[] |
| `isSet` | `boolean` |

#### Defined in

[api/entities/types.ts:833](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L833)

___

### AddRelayerPayingKeyAuthorizationData

Ƭ **AddRelayerPayingKeyAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`AddRelayerPayingKey`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#addrelayerpayingkey) |
| `value` | [`SubsidyData`](../../../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md) |

#### Defined in

[api/entities/types.ts:461](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L461)

___

### AttestPrimaryKeyRotationAuthorizationData

Ƭ **AttestPrimaryKeyRotationAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`AttestPrimaryKeyRotation`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#attestprimarykeyrotation) |
| `value` | [`Identity`](Types.md#identity) |

#### Defined in

[api/entities/types.ts:432](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L432)

___

### Authorization

Ƭ **Authorization**: [`AttestPrimaryKeyRotationAuthorizationData`](Types.md#attestprimarykeyrotationauthorizationdata) \| [`RotatePrimaryKeyAuthorizationData`](Types.md#rotateprimarykeyauthorizationdata) \| [`JoinIdentityAuthorizationData`](Types.md#joinidentityauthorizationdata) \| [`PortfolioCustodyAuthorizationData`](Types.md#portfoliocustodyauthorizationdata) \| [`BecomeAgentAuthorizationData`](Types.md#becomeagentauthorizationdata) \| [`AddRelayerPayingKeyAuthorizationData`](Types.md#addrelayerpayingkeyauthorizationdata) \| [`RotatePrimaryKeyToSecondaryData`](Types.md#rotateprimarykeytosecondarydata) \| [`GenericAuthorizationData`](Types.md#genericauthorizationdata)

Authorization request data corresponding to type

#### Defined in

[api/entities/types.ts:482](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L482)

___

### AuthorizationRequest

Ƭ **AuthorizationRequest**: [`AuthorizationRequest`](../../../../classes/API/Entities/AuthorizationRequest/AuthorizationRequest.md)

#### Defined in

[api/entities/types.ts:46](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L46)

___

### BecomeAgentAuthorizationData

Ƭ **BecomeAgentAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`BecomeAgent`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#becomeagent) |
| `value` | [`KnownPermissionGroup`](Types.md#knownpermissiongroup) \| [`CustomPermissionGroup`](Types.md#custompermissiongroup) |

#### Defined in

[api/entities/types.ts:456](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L456)

___

### Checkpoint

Ƭ **Checkpoint**: [`Checkpoint`](../../../../classes/API/Entities/Checkpoint/Checkpoint.md)

#### Defined in

[api/entities/types.ts:47](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L47)

___

### CheckpointSchedule

Ƭ **CheckpointSchedule**: [`CheckpointSchedule`](../../../../classes/API/Entities/CheckpointSchedule/CheckpointSchedule.md)

#### Defined in

[api/entities/types.ts:48](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L48)

___

### ChildIdentity

Ƭ **ChildIdentity**: [`ChildIdentity`](../../../../classes/API/Entities/Identity/ChildIdentity/ChildIdentity.md)

#### Defined in

[api/entities/types.ts:55](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L55)

___

### Claim

Ƭ **Claim**: [`ScopedClaim`](Types.md#scopedclaim) \| [`UnscopedClaim`](Types.md#unscopedclaim)

#### Defined in

[api/entities/types.ts:240](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L240)

___

### ClaimCountStatInput

Ƭ **ClaimCountStatInput**: \{ `claimType`: [`Accredited`](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md#accredited) ; `issuer`: [`Identity`](Types.md#identity) ; `value`: \{ `accredited`: `BigNumber` ; `nonAccredited`: `BigNumber`  }  } \| \{ `claimType`: [`Affiliate`](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md#affiliate) ; `issuer`: [`Identity`](Types.md#identity) ; `value`: \{ `affiliate`: `BigNumber` ; `nonAffiliate`: `BigNumber`  }  } \| \{ `claimType`: [`Jurisdiction`](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md#jurisdiction) ; `issuer`: [`Identity`](Types.md#identity) ; `value`: \{ `count`: `BigNumber` ; `countryCode`: [`CountryCode`](../../../../enums/Generated/Types/CountryCode/CountryCode.md)  }[]  }

#### Defined in

[api/entities/types.ts:565](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L565)

___

### Condition

Ƭ **Condition**: [`SingleClaimCondition`](../../../../interfaces/API/Entities/Types/SingleClaimCondition/SingleClaimCondition.md) \| [`MultiClaimCondition`](../../../../interfaces/API/Entities/Types/MultiClaimCondition/MultiClaimCondition.md) \| [`IdentityCondition`](../../../../interfaces/API/Entities/Types/IdentityCondition/IdentityCondition.md) \| [`ExternalAgentCondition`](../../../../interfaces/API/Entities/Types/ExternalAgentCondition/ExternalAgentCondition.md) & [`ConditionBase`](../../../../interfaces/API/Entities/Types/ConditionBase/ConditionBase.md)

#### Defined in

[api/entities/types.ts:374](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L374)

___

### CorporateAction

Ƭ **CorporateAction**: [`CorporateAction`](../../../../classes/API/Entities/CorporateAction/CorporateAction.md)

#### Defined in

[api/entities/types.ts:49](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L49)

___

### CustomClaimWithoutScope

Ƭ **CustomClaimWithoutScope**: `Omit`\<[`CustomClaim`](../../../../interfaces/API/Entities/Types/CustomClaim/CustomClaim.md), ``"scope"``\> & \{ `scope`: `undefined`  }

#### Defined in

[api/entities/types.ts:220](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L220)

___

### CustomPermissionGroup

Ƭ **CustomPermissionGroup**: [`CustomPermissionGroup`](../../../../classes/API/Entities/CustomPermissionGroup/CustomPermissionGroup.md)

#### Defined in

[api/entities/types.ts:50](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L50)

___

### DefaultPortfolio

Ƭ **DefaultPortfolio**: [`DefaultPortfolio`](../../../../classes/API/Entities/DefaultPortfolio/DefaultPortfolio.md)

#### Defined in

[api/entities/types.ts:51](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L51)

___

### DefaultTrustedClaimIssuer

Ƭ **DefaultTrustedClaimIssuer**: [`DefaultTrustedClaimIssuer`](../../../../classes/API/Entities/DefaultTrustedClaimIssuer/DefaultTrustedClaimIssuer.md)

#### Defined in

[api/entities/types.ts:52](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L52)

___

### DividendDistribution

Ƭ **DividendDistribution**: [`DividendDistribution`](../../../../classes/API/Entities/DividendDistribution/DividendDistribution.md)

#### Defined in

[api/entities/types.ts:53](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L53)

___

### FungibleAsset

Ƭ **FungibleAsset**: [`FungibleAsset`](../../../../classes/API/Entities/Asset/Fungible/FungibleAsset.md)

#### Defined in

[api/entities/types.ts:59](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L59)

___

### GenericAuthorizationData

Ƭ **GenericAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | `Exclude`\<[`AuthorizationType`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md), [`RotatePrimaryKey`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#rotateprimarykey) \| [`JoinIdentity`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#joinidentity) \| [`PortfolioCustody`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#portfoliocustody) \| [`BecomeAgent`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#becomeagent) \| [`AddRelayerPayingKey`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#addrelayerpayingkey) \| [`RotatePrimaryKeyToSecondary`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#rotateprimarykeytosecondary) \| [`AttestPrimaryKeyRotation`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#attestprimarykeyrotation)\> |
| `value` | `string` |

#### Defined in

[api/entities/types.ts:466](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L466)

___

### GroupPermissions

Ƭ **GroupPermissions**: `Pick`\<[`Permissions`](../../../../interfaces/API/Entities/Types/Permissions/Permissions.md), ``"transactions"`` \| ``"transactionGroups"``\>

Asset permissions shared by agents in a group

#### Defined in

[api/entities/types.ts:667](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L667)

___

### Identity

Ƭ **Identity**: [`Identity`](../../../../classes/API/Entities/Identity/Identity.md)

#### Defined in

[api/entities/types.ts:54](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L54)

___

### InputCondition

Ƭ **InputCondition**: [`SingleClaimCondition`](../../../../interfaces/API/Entities/Types/SingleClaimCondition/SingleClaimCondition.md) \| [`MultiClaimCondition`](../../../../interfaces/API/Entities/Types/MultiClaimCondition/MultiClaimCondition.md) \| [`Modify`](../../../Types/Utils/Utils.md#modify)\<[`IdentityCondition`](../../../../interfaces/API/Entities/Types/IdentityCondition/IdentityCondition.md), \{ `identity`: `string` \| [`Identity`](Types.md#identity)  }\> \| [`ExternalAgentCondition`](../../../../interfaces/API/Entities/Types/ExternalAgentCondition/ExternalAgentCondition.md) & [`InputConditionBase`](Types.md#inputconditionbase)

#### Defined in

[api/entities/types.ts:382](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L382)

___

### InputConditionBase

Ƭ **InputConditionBase**: [`Modify`](../../../Types/Utils/Utils.md#modify)\<[`ConditionBase`](../../../../interfaces/API/Entities/Types/ConditionBase/ConditionBase.md), \{ `trustedClaimIssuers?`: [`InputTrustedClaimIssuer`](Types.md#inputtrustedclaimissuer)[]  }\>

#### Defined in

[api/entities/types.ts:345](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L345)

___

### InputRequirement

Ƭ **InputRequirement**: [`Modify`](../../../Types/Utils/Utils.md#modify)\<[`Requirement`](../../../../interfaces/API/Entities/Types/Requirement/Requirement.md), \{ `conditions`: [`InputCondition`](Types.md#inputcondition)[]  }\>

#### Defined in

[api/entities/types.ts:408](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L408)

___

### InputStatClaim

Ƭ **InputStatClaim**: [`StatJurisdictionClaimInput`](../../../../interfaces/API/Entities/Types/StatJurisdictionClaimInput/StatJurisdictionClaimInput.md) \| [`StatAccreditedClaimInput`](../../../../interfaces/API/Entities/Types/StatAccreditedClaimInput/StatAccreditedClaimInput.md) \| [`StatAffiliateClaimInput`](../../../../interfaces/API/Entities/Types/StatAffiliateClaimInput/StatAffiliateClaimInput.md)

#### Defined in

[api/entities/types.ts:268](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L268)

___

### InputStatType

Ƭ **InputStatType**: \{ `type`: [`Count`](../../../../enums/API/Entities/Types/StatType/StatType.md#count) \| [`Balance`](../../../../enums/API/Entities/Types/StatType/StatType.md#balance)  } \| \{ `claimIssuer`: [`StatClaimIssuer`](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md) ; `type`: [`ScopedCount`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedcount) \| [`ScopedBalance`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[api/entities/types.ts:273](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L273)

___

### InputTrustedClaimIssuer

Ƭ **InputTrustedClaimIssuer**: [`Modify`](../../../Types/Utils/Utils.md#modify)\<[`TrustedClaimIssuer`](../../../../interfaces/API/Entities/Types/TrustedClaimIssuer/TrustedClaimIssuer.md), \{ `identity`: `string` \| [`Identity`](Types.md#identity)  }\>

#### Defined in

[api/entities/types.ts:321](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L321)

___

### Instruction

Ƭ **Instruction**: [`Instruction`](../../../../classes/API/Entities/Instruction/Instruction.md)

#### Defined in

[api/entities/types.ts:56](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L56)

___

### JoinIdentityAuthorizationData

Ƭ **JoinIdentityAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`JoinIdentity`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#joinidentity) |
| `value` | [`Permissions`](../../../../interfaces/API/Entities/Types/Permissions/Permissions.md) |

#### Defined in

[api/entities/types.ts:446](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L446)

___

### KnownPermissionGroup

Ƭ **KnownPermissionGroup**: [`KnownPermissionGroup`](../../../../classes/API/Entities/KnownPermissionGroup/KnownPermissionGroup.md)

#### Defined in

[api/entities/types.ts:57](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L57)

___

### MetadataEntry

Ƭ **MetadataEntry**: [`MetadataEntry`](../../../../classes/API/Entities/MetadataEntry/MetadataEntry.md)

#### Defined in

[api/entities/types.ts:62](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L62)

___

### MultiSig

Ƭ **MultiSig**: [`MultiSig`](../../../../classes/API/Entities/Account/MultiSig/MultiSig.md)

#### Defined in

[api/entities/types.ts:44](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L44)

___

### MultiSigProposal

Ƭ **MultiSigProposal**: [`MultiSigProposal`](../../../../classes/API/Entities/MultiSigProposal/MultiSigProposal.md)

#### Defined in

[api/entities/types.ts:45](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L45)

___

### NextKey

Ƭ **NextKey**: `string` \| `BigNumber` \| ``null``

#### Defined in

[api/entities/types.ts:97](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L97)

___

### Nft

Ƭ **Nft**: [`Nft`](../../../../classes/API/Entities/Asset/NonFungible/Nft/Nft.md)

#### Defined in

[api/entities/types.ts:60](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L60)

___

### NftCollection

Ƭ **NftCollection**: [`NftCollection`](../../../../classes/API/Entities/Asset/NonFungible/NftCollection/NftCollection.md)

#### Defined in

[api/entities/types.ts:61](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L61)

___

### NonFungiblePortfolioMovement

Ƭ **NonFungiblePortfolioMovement**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `asset` | [`NftCollection`](Types.md#nftcollection) \| `string` | - |
| `memo?` | `string` | identifier string to help differentiate transfers |
| `nfts` | ([`Nft`](Types.md#nft) \| `BigNumber`)[] | - |

#### Defined in

[api/entities/types.ts:822](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L822)

___

### NumberedPortfolio

Ƭ **NumberedPortfolio**: [`NumberedPortfolio`](../../../../classes/API/Entities/NumberedPortfolio/NumberedPortfolio.md)

#### Defined in

[api/entities/types.ts:58](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L58)

___

### Offering

Ƭ **Offering**: [`Offering`](../../../../classes/API/Entities/Offering/Offering.md)

#### Defined in

[api/entities/types.ts:63](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L63)

___

### PermissionsLike

Ƭ **PermissionsLike**: \{ `assets?`: [`SectionPermissions`](../../../../interfaces/API/Entities/Types/SectionPermissions/SectionPermissions.md)\<`string` \| [`FungibleAsset`](Types.md#fungibleasset)\> \| ``null`` ; `portfolios?`: [`SectionPermissions`](../../../../interfaces/API/Entities/Types/SectionPermissions/SectionPermissions.md)\<[`PortfolioLike`](Types.md#portfoliolike)\> \| ``null``  } & \{ `transactions?`: [`TransactionPermissions`](../../../../interfaces/API/Entities/Types/TransactionPermissions/TransactionPermissions.md) \| ``null``  } \| \{ `transactionGroups?`: [`TxGroup`](../../../../enums/API/Procedures/Types/TxGroup/TxGroup.md)[]  }

Permissions to grant to a Signer over an Identity

[Permissions](../../../../interfaces/API/Entities/Types/Permissions/Permissions.md)

**`Note`**

TxGroups in the `transactionGroups` array will be transformed into their corresponding `TxTag`s

#### Defined in

[api/entities/types.ts:792](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L792)

___

### PortfolioCustodyAuthorizationData

Ƭ **PortfolioCustodyAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`PortfolioCustody`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#portfoliocustody) |
| `value` | [`NumberedPortfolio`](Types.md#numberedportfolio) \| [`DefaultPortfolio`](Types.md#defaultportfolio) |

#### Defined in

[api/entities/types.ts:451](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L451)

___

### PortfolioLike

Ƭ **PortfolioLike**: `string` \| [`Identity`](Types.md#identity) \| [`NumberedPortfolio`](Types.md#numberedportfolio) \| [`DefaultPortfolio`](Types.md#defaultportfolio) \| \{ `id`: `BigNumber` ; `identity`: `string` \| [`Identity`](Types.md#identity)  }

#### Defined in

[api/entities/types.ts:778](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L778)

___

### PortfolioMovement

Ƭ **PortfolioMovement**: [`FungiblePortfolioMovement`](../../../../interfaces/API/Entities/Types/FungiblePortfolioMovement/FungiblePortfolioMovement.md) \| [`NonFungiblePortfolioMovement`](Types.md#nonfungibleportfoliomovement)

#### Defined in

[api/entities/types.ts:831](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L831)

___

### RotatePrimaryKeyAuthorizationData

Ƭ **RotatePrimaryKeyAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`RotatePrimaryKey`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#rotateprimarykey) |

#### Defined in

[api/entities/types.ts:437](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L437)

___

### RotatePrimaryKeyToSecondaryData

Ƭ **RotatePrimaryKeyToSecondaryData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`RotatePrimaryKeyToSecondary`](../../../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md#rotateprimarykeytosecondary) |
| `value` | [`Permissions`](../../../../interfaces/API/Entities/Types/Permissions/Permissions.md) |

#### Defined in

[api/entities/types.ts:441](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L441)

___

### ScopedClaim

Ƭ **ScopedClaim**: [`JurisdictionClaim`](../../../../interfaces/API/Entities/Types/JurisdictionClaim/JurisdictionClaim.md) \| [`AccreditedClaim`](../../../../interfaces/API/Entities/Types/AccreditedClaim/AccreditedClaim.md) \| [`AffiliateClaim`](../../../../interfaces/API/Entities/Types/AffiliateClaim/AffiliateClaim.md) \| [`BuyLockupClaim`](../../../../interfaces/API/Entities/Types/BuyLockupClaim/BuyLockupClaim.md) \| [`SellLockupClaim`](../../../../interfaces/API/Entities/Types/SellLockupClaim/SellLockupClaim.md) \| [`KycClaim`](../../../../interfaces/API/Entities/Types/KycClaim/KycClaim.md) \| [`ExemptedClaim`](../../../../interfaces/API/Entities/Types/ExemptedClaim/ExemptedClaim.md) \| [`BlockedClaim`](../../../../interfaces/API/Entities/Types/BlockedClaim/BlockedClaim.md) \| [`CustomClaim`](../../../../interfaces/API/Entities/Types/CustomClaim/CustomClaim.md)

#### Defined in

[api/entities/types.ts:227](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L227)

___

### Signer

Ƭ **Signer**: [`Identity`](Types.md#identity) \| [`Account`](Types.md#account)

#### Defined in

[api/entities/types.ts:760](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L760)

___

### StatClaimType

Ƭ **StatClaimType**: [`Accredited`](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md#accredited) \| [`Affiliate`](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md#affiliate) \| [`Jurisdiction`](../../../../enums/API/Entities/Types/ClaimType/ClaimType.md#jurisdiction)

#### Defined in

[api/entities/types.ts:251](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L251)

___

### SubCallback

Ƭ **SubCallback**\<`T`\>: (`result`: `T`) => `void` \| `Promise`\<`void`\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Type declaration

▸ (`result`): `void` \| `Promise`\<`void`\>

##### Parameters

| Name | Type |
| :------ | :------ |
| `result` | `T` |

##### Returns

`void` \| `Promise`\<`void`\>

#### Defined in

[api/entities/types.ts:83](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L83)

___

### Subsidy

Ƭ **Subsidy**: [`Subsidy`](../../../../classes/API/Entities/Subsidy/Subsidy.md)

#### Defined in

[api/entities/types.ts:66](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L66)

___

### TickerReservation

Ƭ **TickerReservation**: [`TickerReservation`](../../../../classes/API/Entities/TickerReservation/TickerReservation.md)

#### Defined in

[api/entities/types.ts:64](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L64)

___

### UnscopedClaim

Ƭ **UnscopedClaim**: [`CddClaim`](../../../../interfaces/API/Entities/Types/CddClaim/CddClaim.md) \| [`CustomClaimWithoutScope`](Types.md#customclaimwithoutscope)

#### Defined in

[api/entities/types.ts:238](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L238)

___

### UnsubCallback

Ƭ **UnsubCallback**: () => `void`

#### Type declaration

▸ (): `void`

##### Returns

`void`

#### Defined in

[api/entities/types.ts:85](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L85)

___

### Venue

Ƭ **Venue**: [`Venue`](../../../../classes/API/Entities/Venue/Venue.md)

#### Defined in

[api/entities/types.ts:65](https://github.com/PolymeshAssociation/polymesh-sdk/blob/8a9158669/src/api/entities/types.ts#L65)
